SERVER-24556 fix warning for AsyncSecureStream::connect